Fix page positioning of tooltips, scrollbar, validation summary etc.

--- a/Web/wwwroot/css/bootstrap.custom.scss
+++ b/Web/wwwroot/css/bootstrap.custom.scss
@@ -161,6 +161,8 @@ label.control-label.required::after {
     border: 1px solid $purple;
     border-radius: var(--bs-tooltip-border-radius);
     box-shadow: $purple-shadow;
+    position: absolute !important;
+    width: fit-content !important;
 }
 
 .tooltip-arrow {
@@ -184,10 +186,11 @@ label.control-label.required::after {
 }
 
 .snow-wrapper {
-    width: 100vw;
-    height: 100vh;
+    /*width: 100vw;
+    height: 100vh;*/
     background: radial-gradient(100% 100% at 100% 0, #7397a103 0, #3f2c4104 100%);
-    overflow: hidden;
+    /*overflow: hidden;*/
+    /*position: absolute;*/
 }
 
 $snow-1: "";
