--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -20,12 +20,16 @@ body {
 .tooltip {
     z-index: 50000;
     border-style: solid;
+    position: absolute !important;
+    width: fit-content !important;
 }
 
-.tooltip.bs-tooltip-auto {   
-    z-index: 50000;
-    border-style: solid;
-}
+    .tooltip.bs-tooltip-auto {
+        z-index: 50000;
+        border-style: solid;
+        position: absolute !important;
+        width: fit-content !important;
+    }
 
 .input-group.input-info input.form-control {
     border-right: none !important;
@@ -44,4 +48,8 @@ body {
 
 label.control-label.text-center {
     text-align : center !important;
+}
+
+div.validation-summary-errors ul, li {
+    list-style-type: none;
 }
